--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-flipper": "^0.212.0",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.3",
+    "redux-flipper": "^2.0.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
