--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-flipper": "^0.212.0",
