--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
@@ -21,7 +22,6 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-flipper": "^0.212.0",
-    "react-native-gesture-handler": "^2.13.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
